--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-    "name": "chrome-extension-svelte-typescript-boilerplate",
-    "version": "3.0.0",
-    "type": "module",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/nekitcorp/chrome-extension-svelte-typescript-boilerplate.git"
-    },
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "check": "svelte-check --tsconfig ./tsconfig.json"
-    },
-    "devDependencies": {
-        "@crxjs/vite-plugin": "2.0.0-beta.3",
-        "@sveltejs/vite-plugin-svelte": "1.1.0",
-        "@tsconfig/svelte": "3.0.0",
-        "@types/chrome": "0.0.200",
-        "svelte": "3.52.0",
-        "svelte-check": "2.9.2",
-        "svelte-preprocess": "4.10.7",
-        "tslib": "2.4.0",
-        "typescript": "4.8.4",
-        "vite": "3.2.0"
-    }
+  "name": "chrome-extension-svelte-typescript-boilerplate",
+  "version": "3.0.0",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nekitcorp/chrome-extension-svelte-typescript-boilerplate.git"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "supabase:typegen": "supabase gen types typescript --project-id jfzisybugkzcatmuphnv > src/lib/database.types.ts"
+  },
+  "devDependencies": {
+    "@crxjs/vite-plugin": "2.0.0-beta.3",
+    "@sveltejs/vite-plugin-svelte": "1.1.0",
+    "@tsconfig/svelte": "3.0.0",
+    "@types/chrome": "0.0.200",
+    "@types/lodash": "^4.14.191",
+    "svelte": "3.52.0",
+    "svelte-check": "2.9.2",
+    "svelte-preprocess": "4.10.7",
+    "tslib": "2.4.0",
+    "typescript": "4.8.4",
+    "vite": "3.2.0",
+    "vite-plugin-windicss": "^1.8.10",
+    "windicss": "^3.5.6"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.10.0",
+    "@sveltestack/svelte-query": "^1.6.0",
+    "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
+    "name-recognition": "^1.3.1",
+    "sswr": "^1.7.0"
+  }
 }
