--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://web.telegram.org/*"],
       "js": ["src/content/index.ts"]
     }
   ],
