--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tsconfig/svelte": "3.0.0",
     "@types/chrome": "0.0.200",
     "@types/lodash": "^4.14.191",
+    "prettier": "^2.8.7",
+    "prettier-plugin-svelte": "^2.10.0",
     "svelte": "3.52.0",
     "svelte-check": "2.9.2",
     "svelte-preprocess": "4.10.7",
@@ -30,9 +32,16 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.10.0",
     "@sveltestack/svelte-query": "^1.6.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.127.0",
     "name-recognition": "^1.3.1",
-    "sswr": "^1.7.0"
+    "pocketbase": "^0.12.1",
+    "sswr": "^1.7.0",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
