* chore(manifest.json): update extension name and description
* refactor(Options.svelte): move SignIn component to a separate file and import it
* refactor(Options.svelte): remove console.log statements
* refactor(Options.svelte): remove redundant else statement in the template
* refactor(Options.svelte): add check for profile existence before rendering the component

* chore(PopupHeader.svelte): remove unused code and replace refresh logic with window.location.reload()

* refactor(SignIn.svelte): use onMount to get code from chrome storage instead of using async function
* refactor(SignIn.svelte): remove unused variables and functions
* refactor(SignIn.svelte): comment out unused code

* chore(SignIn.svelte): comment out unused code and remove unnecessary comments

* refactor(Main.svelte): use async/await instead of Promise.then()
* fix(Main.svelte): handle case when session.users is undefined
* feat(Main.svelte): add console.log statements for debugging purposes
* feat(types.ts): add verified field to Profile interface

* refactor(popup/index.ts): remove unused supabase import and add type for Profile
* feat(popup/index.ts): add support for verification codes and profiles
* chore(windi.config.cjs): extend default font family instead of replacing it

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "PA Task Manager",
-  "description": "Boilerplate for Chrome Extension Svelte Typescript project",
+  "name": "VA Task Manager",
+  "description": "Extension designed to help virtual assistants and their clients manage tasks effortlessly within Telegram chats",
   "version": "1.0",
   "manifest_version": 3,
   "icons": {
