--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "VA Task Manager",
   "description": "Extension designed to help virtual assistants and their clients manage tasks effortlessly within Telegram chats",
-  "version": "1.0",
+  "version": "1.0.1",
   "manifest_version": 3,
   "icons": {
     "16": "src/assets/icons/get_started16.png",
@@ -31,5 +31,11 @@
       "128": "src/assets/icons/get_started128.png"
     }
   },
-  "permissions": ["storage", "tabs", "contextMenus", "scripting", "activeTab"]
+  "web_accessible_resources": [
+    {
+      "resources": ["src/popupEdit/popup.html"],
+      "matches": ["https://web.telegram.org/*"]
+    }
+  ],
+  "permissions": ["storage", "tabs", "contextMenus", "scripting", "activeTab", "history", "webNavigation"]
 }
