--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "chrome-extension-svelte-typescript-boilerplate",
-  "version": "3.0.0",
+  "name": "va-task-tracker",
+  "version": "1.0.0",
   "type": "module",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nekitcorp/chrome-extension-svelte-typescript-boilerplate.git"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "supabase:typegen": "supabase gen types typescript --project-id jfzisybugkzcatmuphnv > src/lib/database.types.ts"
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.3",
