--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "VA Task Manager",
   "description": "Extension designed to help virtual assistants and their clients manage tasks effortlessly within Telegram chats",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "manifest_version": 3,
   "icons": {
     "16": "src/assets/icons/get_started16.png",
@@ -31,11 +31,5 @@
       "128": "src/assets/icons/get_started128.png"
     }
   },
-  "web_accessible_resources": [
-    {
-      "resources": ["src/popupEdit/popup.html"],
-      "matches": ["https://web.telegram.org/*"]
-    }
-  ],
-  "permissions": ["storage", "tabs", "contextMenus", "scripting", "activeTab", "history", "webNavigation"]
+  "permissions": ["storage", "tabs", "history"]
 }
