--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.3",
     "@sveltejs/vite-plugin-svelte": "1.1.0",
+    "@swc-node/register": "^1.6.5",
     "@tsconfig/svelte": "3.0.0",
     "@types/chrome": "0.0.200",
     "@types/lodash": "^4.14.191",
@@ -25,18 +26,27 @@
     "windicss": "^3.5.6"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@mtproto/core": "6.2.0",
     "@supabase/supabase-js": "^2.10.0",
     "@sveltestack/svelte-query": "^1.6.0",
     "@tailwindcss/forms": "^0.5.3",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
+    "events": "^3.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.127.0",
     "name-recognition": "^1.3.1",
     "pocketbase": "^0.12.1",
+    "process": "^0.11.10",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "sswr": "^1.7.0",
     "tailwind-merge": "^1.10.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "telegram": "^2.16.4",
+    "util": "^0.12.5"
   }
 }
