--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,5 @@
       "128": "src/assets/icons/get_started128.png"
     }
   },
-  "permissions": ["storage", "tabs", "history"]
+  "permissions": ["storage", "tabs", "history", "notifications"]
 }
