--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.3",
+    "@rgossiaux/svelte-headlessui": "^1.0.2",
     "@sveltejs/vite-plugin-svelte": "1.1.0",
     "@swc-node/register": "^1.6.5",
     "@tsconfig/svelte": "3.0.0",
@@ -39,6 +40,7 @@
     "events": "^3.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.127.0",
+    "lucide-svelte": "^0.216.0",
     "name-recognition": "^1.3.1",
     "pocketbase": "^0.12.1",
     "process": "^0.11.10",
