--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "windicss": "^3.5.6"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^1.10.3",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@mtproto/core": "6.2.0",
